Modified index.html game.js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8" />
   <title> Titile</title>
 
+  <!-- HTML to jquery Link -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
  <!-- HTML to CSS file Link -->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
  
@@ -32,16 +36,12 @@
 <p> Score : <span id="score"></span> </p>
 
 
-
-
-
-
-
-
-
 <button id="crystal1">Crystal-1</button>
-<button id="crystal1">Crystal-2</button>
-<button id="crystal1">Crystal-3</button>
-<button id="crystal1">Crystal-4</button>
+<button id="crystal2">Crystal-2</button>
+<button id="crystal3">Crystal-3</button>
+<button id="crystal4">Crystal-4</button>
+
+
+
 </body>
 </html>
